create service section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
     <div class="mouse-click"></div>
     <img src="images/mouse_click.png" alt=" mouse_click" id="mouse-click">
   </div>
-  
+  <div class="container about">
+    <h2 id="about">ABOUT US</h2>
+    <p>When you work with us, you are part of a team of commited collaborators. All aspects of our software development process are intergrated , interactive and agile.</p>
+    <p>Our approach unifies design, development and product managent to create exceptional products.</p> 
+    <p>We start each project by understanding your business goals, the users needs and the product requirements.</p>
+    <p>we help translate them into active and elegant solutions.</p>
+  </div>
+  <div class="services">
+    <h2>SERVICES</h2>
+    <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</p>
+    <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
+    <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
+  </div>  
   <script src="js/jquery-3.4.1.js"></script>
   <script src="js/script.js"></script>
 </body>
