Update portfolio section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,59 @@
     <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</p>
     <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
     <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
-  </div>  
+  </div> 
+  <div class="container what-we-do">
+    <h2>WHAT WE DO</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <img src="images/services_icons/design_icon.png" alt="design">
+        <p>DESIGN</p>
+      </div>
+      <div class="col-md-4">
+        <img src="images/services_icons/dev_icon.png" alt="development">
+        <P>DEVELOPMENT</P>
+      </div>
+      <div class="col-md-4">
+        <img src="images/services_icons/product_icon.png" alt="products">
+        <P>PRODUCT MANAGEMENT</P>
+      </div>
+    </div>
+  </div>
+  <div class="portfolio">
+    <h2>PORTFOLIO</h2>
+    <div class="row" id="portfolio">
+      <div class="col-md-3">
+        <img src="images/portfolio/work4.jpg" alt="work1">
+      </div>
+      <div class="col-md-3">
+        <img src="images/portfolio/work3.jpg" alt="work2">
+      </div>
+      <div class="col-md-3">
+        <img src="images/portfolio/work2.jpg" alt="work3">
+      </div>
+      <div class="col-md-3">
+        <img src="images/portfolio/work1.jpg" alt="work4">
+      </div>
+    </div>
+    <div class="row" id="portfolio">
+        <div class="col-md-3">
+          <img src="images/portfolio/work5.jpg" alt="work1">
+        </div>
+        <div class="col-md-3">
+          <img src="images/portfolio/work6.jpg" alt="work2">
+        </div>
+        <div class="col-md-3">
+          <img src="images/portfolio/work7.jpg" alt="work3">
+        </div>
+        <div class="col-md-3">
+          <img src="images/portfolio/work8.jpg" alt="work4">
+        </div>
+      </div>
+  </div> 
+  <div class="container contact">
+    <h2>CONTACT US</h2>
+
+  </div>
   <script src="js/jquery-3.4.1.js"></script>
   <script src="js/script.js"></script>
 </body>
