update contact us

--- a/index.html
+++ b/index.html
@@ -80,8 +80,31 @@
   </div> 
   <div class="container contact">
     <h2>CONTACT US</h2>
-
+    <form action="">
+      <div class="form-group form-inline">
+        <input type="text" class="form-control" id="name" name="name" placeholder="Name....">
+        <input type="email" class="form-control" id="email" placeholder="Email....">
+      </div>
+      <div class="form-group">
+        <textarea class="form-control" rows="8" id="comment" placeholder="Your message here...."></textarea>
+      </div>
+      <button type="submit" class="btn btn-default col-md-4">Submit</button>
+    </form>
   </div>
+  <footer>
+    <img src="images/social_icons/twitter.png" alt="twitter">
+    <img src="images/social_icons/dribble.png" alt="dribble">
+    <img src="images/social_icons/facebook.png" alt="facebook">
+    <img src="images/social_icons/g_plus.png" alt="g_plus">
+    <img src="images/social_icons/skype.png" alt="skype">
+    <img src="images/social_icons/stumble_upon.png" alt="stumble_upon">
+    <img src="images/social_icons/behance.png" alt="behance">
+    <img src="images/social_icons/pinterest.png" alt="pinterest">
+    <img src="images/social_icons/flickr.png" alt="flickr">
+    <!-- <img src="images/social_icons/you_tube.png" alt=""> -->
+    <p>DELANI STUDIO</p>
+    <p>2019</p>
+  </footer>
   <script src="js/jquery-3.4.1.js"></script>
   <script src="js/script.js"></script>
 </body>
