add footer icons to index.html

--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
   </div> 
   <div class="container contact">
     <h2>CONTACT US</h2>
-    <form action="">
+    <form>
       <div class="form-group form-inline">
-        <input type="text" class="form-control" id="name" name="name" placeholder="Name....">
-        <input type="email" class="form-control" id="email" placeholder="Email....">
+        <input type="text" class="form-control" id="name" name="name" placeholder = "Name....">
+        <input type="email" class="form-control" id="email" placeholder = "Email....">
       </div>
       <div class="form-group">
-        <textarea class="form-control" rows="8" id="comment" placeholder="Your message here...."></textarea>
+        <textarea class="form-control" rows="10" id="comment" placeholder = "Your message here...."></textarea>
       </div>
-      <button type="submit" class="btn btn-default col-md-4">Submit</button>
+      <button type="submit" class="btn btn-primary col-md-1">Submit</button>
     </form>
   </div>
   <footer>
