add more divs to portfolio for easy styling and applying jQuery

--- a/index.html
+++ b/index.html
@@ -34,16 +34,34 @@
     <h2>WHAT WE DO</h2>
     <div class="row">
       <div class="col-md-4">
-        <img src="images/services_icons/design_icon.png" alt="design">
-        <p>DESIGN</p>
+        <div id="design">
+          <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
+            Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+        </div>
+        <div id="design-image">
+          <img src="images/services_icons/design_icon.png" alt="design">
+          <p>DESIGN</p>
+        </div>
       </div>
       <div class="col-md-4">
-        <img src="images/services_icons/dev_icon.png" alt="development">
-        <P>DEVELOPMENT</P>
+        <div id="development">
+          <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
+             They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+        </div>
+        <div id="development-image">
+          <img src="images/services_icons/dev_icon.png" alt="development">
+          <P>DEVELOPMENT</P>
+        </div>
       </div>
       <div class="col-md-4">
-        <img src="images/services_icons/product_icon.png" alt="products">
-        <P>PRODUCT MANAGEMENT</P>
+        <div id="product">
+          <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
+            They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+        </div>
+        <div id="product-image">
+          <img src="images/services_icons/product_icon.png" alt="products">
+          <P>PRODUCT MANAGEMENT</P>
+        </div>
       </div>
     </div>
   </div>
