--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <div class="row">
       <div class="col-md-4">
         <div id="design">
-          <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
-            Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+          <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
+            <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
         </div>
         <div id="design-image">
           <img src="images/services_icons/design_icon.png" alt="design">
@@ -45,8 +45,8 @@
       </div>
       <div class="col-md-4">
         <div id="development">
-          <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
-             They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+          <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
+             <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
         </div>
         <div id="development-image">
           <img src="images/services_icons/dev_icon.png" alt="development">
@@ -55,8 +55,8 @@
       </div>
       <div class="col-md-4">
         <div id="product">
-          <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
-            They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+          <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
+          <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
         </div>
         <div id="product-image">
           <img src="images/services_icons/product_icon.png" alt="products">
@@ -68,37 +68,45 @@
   <div class="portfolio">
     <h2>PORTFOLIO</h2>
     <div class="row" id="portfolio">
-      <div class="col-md-3">
-        <img src="images/portfolio/work4.jpg" alt="work1">
+      <div class="col-md-3" id="work1">
+        <img src="images/portfolio/work4.jpg" alt="work1" >
+        <p id="overlay">Delani Studio</p>
       </div>
-      <div class="col-md-3">
-        <img src="images/portfolio/work3.jpg" alt="work2">
+      <div class="col-md-3" id="work2">
+        <img src="images/portfolio/work3.jpg" alt="work2" id="work2">
+        <p id="overlay2">Delani Studio</p>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3" id="work3">
         <img src="images/portfolio/work2.jpg" alt="work3">
+        <p id="overlay3">Delani Studio</p>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3" id="work4">
         <img src="images/portfolio/work1.jpg" alt="work4">
+        <p id="overlay4 ">Delani Studio</p>
       </div>
     </div>
     <div class="row" id="portfolio">
-        <div class="col-md-3">
+        <div class="col-md-3" id="work5">
           <img src="images/portfolio/work5.jpg" alt="work1">
+          <p id="overlay5">Delani Studio</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" id="work6">
           <img src="images/portfolio/work6.jpg" alt="work2">
+          <p id="overlay6">Delani Studio</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" id="work7">
           <img src="images/portfolio/work7.jpg" alt="work3">
+          <p id="overlay7">Delani Studio</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" id="work8">
           <img src="images/portfolio/work8.jpg" alt="work4">
+          <p id="overlay8">Delani Studio</p>
         </div>
       </div>
   </div> 
   <div class="container contact">
     <h2>CONTACT US</h2>
-    <form>
+    <form id="form34A">
       <div class="form-group form-inline">
         <input type="text" class="form-control" id="name" name="name" placeholder = "Name....">
         <input type="email" class="form-control" id="email" placeholder = "Email....">
