--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <h1> TO DELANI STUDIO</h1>
     <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
     <div class="mouse-click"></div>
-    <img src="images/mouse_click.png" alt=" mouse_click" id="mouse-click">
+    <a href="#about-us"><img src="images/mouse_click.png" alt=" mouse_click" id="mouse-click"></a> 
   </div>
-  <div class="container about">
+  <div class="container about" id="about-us">
     <h2 id="about">ABOUT US</h2>
     <p>When you work with us, you are part of a team of commited collaborators. All aspects of our software development process are intergrated , interactive and agile.</p>
     <p>Our approach unifies design, development and product managent to create exceptional products.</p> 
@@ -25,10 +25,12 @@
     <p>we help translate them into active and elegant solutions.</p>
   </div>
   <div class="services">
-    <h2>SERVICES</h2>
-    <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</p>
-    <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
-    <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
+    <div id="servicesoverlay">
+      <h2>SERVICES</h2>
+      <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</p>
+      <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
+      <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
+    </div>
   </div> 
   <div class="container what-we-do">
     <h2>WHAT WE DO</h2>
@@ -70,37 +72,37 @@
     <div class="row" id="portfolio">
       <div class="col-md-3" id="work1">
         <img src="images/portfolio/work4.jpg" alt="work1" >
-        <p id="overlay">Delani Studio</p>
+        <p id="overlay"class="text">Delani Studio</p>
       </div>
       <div class="col-md-3" id="work2">
         <img src="images/portfolio/work3.jpg" alt="work2" id="work2">
-        <p id="overlay2">Delani Studio</p>
+        <p id="overlay2" class="text">Delani Studio</p>
       </div>
       <div class="col-md-3" id="work3">
         <img src="images/portfolio/work2.jpg" alt="work3">
-        <p id="overlay3">Delani Studio</p>
+        <p id="overlay3"class="text">Delani Studio</p>
       </div>
       <div class="col-md-3" id="work4">
         <img src="images/portfolio/work1.jpg" alt="work4">
-        <p id="overlay4 ">Delani Studio</p>
+        <p id="overlay4" class="text">Delani Studio</p>
       </div>
     </div>
     <div class="row" id="portfolio">
         <div class="col-md-3" id="work5">
           <img src="images/portfolio/work5.jpg" alt="work1">
-          <p id="overlay5">Delani Studio</p>
+          <p id="overlay5" class="text">Delani Studio</p>
         </div>
         <div class="col-md-3" id="work6">
           <img src="images/portfolio/work6.jpg" alt="work2">
-          <p id="overlay6">Delani Studio</p>
+          <p id="overlay6"class="text">Delani Studio</p>
         </div>
         <div class="col-md-3" id="work7">
           <img src="images/portfolio/work7.jpg" alt="work3">
-          <p id="overlay7">Delani Studio</p>
+          <p id="overlay7" class="text">Delani Studio</p>
         </div>
         <div class="col-md-3" id="work8">
           <img src="images/portfolio/work8.jpg" alt="work4">
-          <p id="overlay8">Delani Studio</p>
+          <p id="overlay8" class="text">Delani Studio</p>
         </div>
       </div>
   </div> 
@@ -112,7 +114,7 @@
         <input type="email" class="form-control" id="email" placeholder = "Email....">
       </div>
       <div class="form-group">
-        <textarea class="form-control" rows="10" id="comment" placeholder = "Your message here...."></textarea>
+        <textarea class="form-control" rows="8" id="comment" placeholder = "Your message here...."></textarea>
       </div>
       <button type="submit" class="btn btn-primary col-md-1">Submit</button>
     </form>
