--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
       </div>
   </div> 
-  <div class="container contact">
+  <div class="container-fluid contact">
     <h2>CONTACT US</h2>
     <form id="form34A">
       <div class="form-group form-inline">
