Add mail chimp API to track user messages

--- a/index.html
+++ b/index.html
@@ -109,10 +109,12 @@
   </div> 
   <div class="container-fluid contact">
     <h2>CONTACT US</h2>
-    <form id="form34A">
+    <form id="form34A" action="https://gmail.us3.list-manage.com/subscribe/post" method="POST">
+      <input type="hidden" name="u" value="e71bed4d6ae5a7c984dfe28b0">
+      <input type="hidden" name="id" value="dbf7e27685">
       <div class="form-group form-inline">
-        <input type="text" class="form-control" id="name" name="name" placeholder = "Name....">
-        <input type="email" class="form-control" id="email" placeholder = "Email....">
+        <input type="text" class="form-control" placeholder = "Name...." name="MERGE1" id="MERGE1" size="25" value="">
+        <input type="email" class="form-control"  placeholder = "Email...." autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="">
       </div>
       <div class="form-group">
         <textarea class="form-control" rows="8" id="comment" placeholder = "Your message here...."></textarea>
