Edit media query for better responsiveness

--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
       </div>
       <div class="col-md-3" id="work2">
         <img src="images/portfolio/work3.jpg" alt="work2" id="work2">
-        <p id="overlay2" class="text">Delani Studio</p>
+        <p id="overlay2" class="text">Ontario Security</p>
       </div>
       <div class="col-md-3" id="work3">
         <img src="images/portfolio/work2.jpg" alt="work3">
-        <p id="overlay3"class="text">Delani Studio</p>
+        <p id="overlay3"class="text">Pyramids</p>
       </div>
       <div class="col-md-3" id="work4">
         <img src="images/portfolio/work1.jpg" alt="work4">
-        <p id="overlay4" class="text">Delani Studio</p>
+        <p id="overlay4" class="text">Jim Carry</p>
       </div>
     </div>
     <div class="row" id="portfolio">
         <div class="col-md-3" id="work5">
           <img src="images/portfolio/work5.jpg" alt="work1">
-          <p id="overlay5" class="text">Delani Studio</p>
+          <p id="overlay5" class="text">Have a Nice Day</p>
         </div>
         <div class="col-md-3" id="work6">
           <img src="images/portfolio/work6.jpg" alt="work2">
@@ -99,11 +99,11 @@
         </div>
         <div class="col-md-3" id="work7">
           <img src="images/portfolio/work7.jpg" alt="work3">
-          <p id="overlay7" class="text">Delani Studio</p>
+          <p id="overlay7" class="text">Burned</p>
         </div>
         <div class="col-md-3" id="work8">
           <img src="images/portfolio/work8.jpg" alt="work4">
-          <p id="overlay8" class="text">Delani Studio</p>
+          <p id="overlay8" class="text">Giraffe Restaurant</p>
         </div>
       </div>
   </div> 
