Add headings to what we do section

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
     </div>
   </div> 
   <div class="container what-we-do">
-    <h2>WHAT WE DO</h2>
+    <h2 class="headings">WHAT WE DO</h2>
     <div class="row">
       <div class="col-md-4">
         <div id="design">
+          <h2 class="title">DESIGN</h2>
           <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
             <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
         </div>
@@ -48,6 +49,7 @@
       </div>
       <div class="col-md-4">
         <div id="development">
+          <h2 class="title">DEVELOPMENT</h2>
           <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
              <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
         </div>
@@ -58,6 +60,7 @@
       </div>
       <div class="col-md-4">
         <div id="product">
+          <h2 class="title">PRODUCT MANAGEMENT</h2>
           <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
           <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
         </div>
