Add MailChimp subscription form

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <title>Delani Studio</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
+  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us3.list-manage.com","uuid":"e71bed4d6ae5a7c984dfe28b0","lid":"dbf7e27685","uniqueMethods":true}) })</script>
 </head>
 <body>
+  
   <div class="landing">
     <img src="images/logo/logo.png" alt="logo" id="logo">
     <h1>WELCOME</h1> 
@@ -112,12 +114,11 @@
   </div> 
   <div class="container-fluid contact">
     <h2>CONTACT US</h2>
+
     <!-- <form id="form34A" action="https://gmail.us3.list-manage.com/subscribe/post" method="POST">
       <input type="hidden" name="u" value="e71bed4d6ae5a7c984dfe28b0">
       <input type="hidden" name="id" value="dbf7e27685"> -->
-    <form id="form34A" action="https://gmail.us3.list-manage.com/subscribe/post" method="POST">
-      <input type="hidden" name="u" value="e71bed4d6ae5a7c984dfe28b0">
-      <input type="hidden" name="id" value="dbf7e27685">
+    <form id="form34A">
       <div class="form-group form-inline">
         <input type="text" class="form-control" placeholder = "Name...." name="MERGE1" id="MERGE1" size="25" value="">
         <input type="email" class="form-control"  placeholder = "Email...." autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="">
@@ -142,6 +143,7 @@
     <p>DELANI STUDIO</p>
     <p>2019</p>
   </footer>
+  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us3.list-manage.com","uuid":"e71bed4d6ae5a7c984dfe28b0","lid":"dbf7e27685","uniqueMethods":true}) })</script>
   <script src="js/jquery-3.4.1.js"></script>
   <script src="js/script.js"></script>
 </body>
