make the site responsive for small devices

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="row" id="portfolio">
       <div class="col-md-3" id="work1">
         <img src="images/portfolio/work4.jpg" alt="work1" >
-        <p id="overlay"class="text">Delani Studio</p>
+        <p id="overlay"class="text">Black Studio</p>
       </div>
       <div class="col-md-3" id="work2">
         <img src="images/portfolio/work3.jpg" alt="work2" id="work2">
@@ -96,11 +96,11 @@
     <div class="row" id="portfolio">
         <div class="col-md-3" id="work5">
           <img src="images/portfolio/work5.jpg" alt="work1">
-          <p id="overlay5" class="text">Have a Nice Day</p>
+          <p id="overlay5" class="text">Have A Nice Day</p>
         </div>
         <div class="col-md-3" id="work6">
           <img src="images/portfolio/work6.jpg" alt="work2">
-          <p id="overlay6"class="text">Delani Studio</p>
+          <p id="overlay6"class="text">Calculator</p>
         </div>
         <div class="col-md-3" id="work7">
           <img src="images/portfolio/work7.jpg" alt="work3">
