Add google adds

--- a/index.html
+++ b/index.html
@@ -1,149 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="shortcut icon" href="../images/Delaninew.ico" />
-  <title>Delani Studio</title>
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us3.list-manage.com","uuid":"e71bed4d6ae5a7c984dfe28b0","lid":"dbf7e27685","uniqueMethods":true}) })</script>
-</head>
-<body>
-  
-  <div class="landing">
-    <img src="images/logo/logo.png" alt="logo" id="logo">
-    <h1>WELCOME</h1> 
-    <h1> TO DELANI STUDIO</h1>
-    <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
-    <div class="mouse-click"></div>
-    <a href="#about-us"><img src="images/mouse_click.png" alt=" mouse_click" id="mouse-click"></a> 
-  </div>
-  <div class="container about" id="about-us">
-    <h2 id="about">ABOUT US</h2>
-    <p>When you work with us, you are part of a team of commited collaborators. All aspects of our software development process are intergrated , interactive and agile.</p>
-    <p>Our approach unifies design, development and product managent to create exceptional products.</p> 
-    <p>We start each project by understanding your business goals, the users needs and the product requirements.</p>
-    <p>we help translate them into active and elegant solutions.</p>
-  </div>
-  <div class="services">
-    <div id="servicesoverlay">
-      <h2>SERVICES</h2>
-      <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</p>
-      <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
-      <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" href="../images/Delaninew.ico" />
+    <title>Delani Studio</title>
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5850882928261471"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js"
+      data-dojo-config="usePlainJson: true, isDebug: false"
+    ></script>
+    <script type="text/javascript">
+      window.dojoRequire(["mojo/signup-forms/Loader"], function (L) {
+        L.start({
+          baseUrl: "mc.us3.list-manage.com",
+          uuid: "e71bed4d6ae5a7c984dfe28b0",
+          lid: "dbf7e27685",
+          uniqueMethods: true,
+        });
+      });
+    </script>
+  </head>
+  <body>
+    <div class="landing">
+      <img src="images/logo/logo.png" alt="logo" id="logo" />
+      <h1>WELCOME</h1>
+      <h1>TO DELANI STUDIO</h1>
+      <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+      <div class="mouse-click"></div>
+      <a href="#about-us"
+        ><img src="images/mouse_click.png" alt=" mouse_click" id="mouse-click"
+      /></a>
     </div>
-  </div> 
-  <div class="container what-we-do">
-    <h2 class="headings">WHAT WE DO</h2>
-    <div class="row">
-      <div class="col-md-4">
-        <div id="design">
-          <h2 class="title">DESIGN</h2>
-          <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
-            <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
-        </div>
-        <div id="design-image">
-          <img src="images/services_icons/design_icon.png" alt="design">
-          <p>DESIGN</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div id="development">
-          <h2 class="title">DEVELOPMENT</h2>
-          <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
-             <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
-        </div>
-        <div id="development-image">
-          <img src="images/services_icons/dev_icon.png" alt="development">
-          <P>DEVELOPMENT</P>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div id="product">
-          <h2 class="title">PRODUCT MANAGEMENT</h2>
-          <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
-          <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
-        </div>
-        <div id="product-image">
-          <img src="images/services_icons/product_icon.png" alt="products">
-          <P>PRODUCT MANAGEMENT</P>
-        </div>
-      </div>
+    <div class="container about" id="about-us">
+      <h2 id="about">ABOUT US</h2>
+      <p>
+        When you work with us, you are part of a team of commited collaborators.
+        All aspects of our software development process are intergrated ,
+        interactive and agile.
+      </p>
+      <p>
+        Our approach unifies design, development and product managent to create
+        exceptional products.
+      </p>
+      <p>
+        We start each project by understanding your business goals, the users
+        needs and the product requirements.
+      </p>
+      <p>we help translate them into active and elegant solutions.</p>
     </div>
-  </div>
-  <div class="portfolio">
-    <h2>PORTFOLIO</h2>
-    <div class="row" id="portfolio">
-      <div class="col-md-3" id="work1">
-        <img src="images/portfolio/work4.jpg" alt="work1" >
-        <p id="overlay"class="text">Black Studio</p>
-      </div>
-      <div class="col-md-3" id="work2">
-        <img src="images/portfolio/work3.jpg" alt="work2" id="work2">
-        <p id="overlay2" class="text">Ontario Security</p>
-      </div>
-      <div class="col-md-3" id="work3">
-        <img src="images/portfolio/work2.jpg" alt="work3">
-        <p id="overlay3"class="text">Pyramids</p>
-      </div>
-      <div class="col-md-3" id="work4">
-        <img src="images/portfolio/work1.jpg" alt="work4">
-        <p id="overlay4" class="text">Jim Carry</p>
+    <div class="services">
+      <div id="servicesoverlay">
+        <h2>SERVICES</h2>
+        <p>
+          Before we sign a contract or write a line of code, our team will spend
+          the neccessary time needed to understand your product vission.
+        </p>
+        <p>
+          The outcome of the scoping session a proposal or high-level statement
+          of work.
+        </p>
+        <p>
+          based on your requirements, we can provide a complete offering or just
+          the piece you need.
+        </p>
       </div>
     </div>
-    <div class="row" id="portfolio">
+    <div class="container what-we-do">
+      <h2 class="headings">WHAT WE DO</h2>
+      <div class="row">
+        <div class="col-md-4">
+          <div id="design">
+            <h2 class="title">DESIGN</h2>
+            <p>
+              Our design practice offers a full range of services including
+              brand strategy, interaction and visual design and user experience
+              testing.
+            </p>
+            <p>
+              Throughout your project, our designers create and implement visual
+              design and workflows, solicit user feedback and work with you to
+              make sure what gets built is what is needed.
+            </p>
+          </div>
+          <div id="design-image">
+            <img src="images/services_icons/design_icon.png" alt="design" />
+            <p>DESIGN</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div id="development">
+            <h2 class="title">DEVELOPMENT</h2>
+            <p>
+              All engineers are fluent in the latest enterprise, mobile and web
+              development technologies.
+            </p>
+            <p>
+              They collaborate with your team to write, and improve code on a
+              daily basis, using proven practices such as test-driven
+              development and pair programming.
+            </p>
+          </div>
+          <div id="development-image">
+            <img src="images/services_icons/dev_icon.png" alt="development" />
+            <p>DEVELOPMENT</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div id="product">
+            <h2 class="title">PRODUCT MANAGEMENT</h2>
+            <p>
+              All engineers are fluent in the latest enterprise, mobile and web
+              development technologies.
+            </p>
+            <p>
+              They collaborate with your team to write, and improve code on a
+              daily basis, using proven practices such as test-driven
+              development and pair programming.
+            </p>
+          </div>
+          <div id="product-image">
+            <img src="images/services_icons/product_icon.png" alt="products" />
+            <p>PRODUCT MANAGEMENT</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="portfolio">
+      <h2>PORTFOLIO</h2>
+      <div class="row" id="portfolio">
+        <div class="col-md-3" id="work1">
+          <img src="images/portfolio/work4.jpg" alt="work1" />
+          <p id="overlay" class="text">Black Studio</p>
+        </div>
+        <div class="col-md-3" id="work2">
+          <img src="images/portfolio/work3.jpg" alt="work2" id="work2" />
+          <p id="overlay2" class="text">Ontario Security</p>
+        </div>
+        <div class="col-md-3" id="work3">
+          <img src="images/portfolio/work2.jpg" alt="work3" />
+          <p id="overlay3" class="text">Pyramids</p>
+        </div>
+        <div class="col-md-3" id="work4">
+          <img src="images/portfolio/work1.jpg" alt="work4" />
+          <p id="overlay4" class="text">Jim Carry</p>
+        </div>
+      </div>
+      <div class="row" id="portfolio">
         <div class="col-md-3" id="work5">
-          <img src="images/portfolio/work5.jpg" alt="work1">
+          <img src="images/portfolio/work5.jpg" alt="work1" />
           <p id="overlay5" class="text">Have A Nice Day</p>
         </div>
         <div class="col-md-3" id="work6">
-          <img src="images/portfolio/work6.jpg" alt="work2">
-          <p id="overlay6"class="text">Calculator</p>
+          <img src="images/portfolio/work6.jpg" alt="work2" />
+          <p id="overlay6" class="text">Calculator</p>
         </div>
         <div class="col-md-3" id="work7">
-          <img src="images/portfolio/work7.jpg" alt="work3">
+          <img src="images/portfolio/work7.jpg" alt="work3" />
           <p id="overlay7" class="text">Burned</p>
         </div>
         <div class="col-md-3" id="work8">
-          <img src="images/portfolio/work8.jpg" alt="work4">
+          <img src="images/portfolio/work8.jpg" alt="work4" />
           <p id="overlay8" class="text">Giraffe Restaurant</p>
         </div>
       </div>
-  </div> 
-  <div class="container-fluid contact">
-    <h2>CONTACT US</h2>
+    </div>
+    <div class="container-fluid contact">
+      <h2>CONTACT US</h2>
 
-    <form id="form34A" action="https://gmail.us3.list-manage.com/subscribe/post" method="POST">
-      <input type="hidden" name="u" value="e71bed4d6ae5a7c984dfe28b0">
-      <input type="hidden" name="id" value="dbf7e27685">
-      <div class="form-group form-inline">
-        <input type="text" class="form-control" placeholder = "Name...." name="MERGE1" id="MERGE1" size="25" value="">
-        <input type="email" class="form-control"  placeholder = "Email...." autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="">
-      </div>
-      <div class="form-group">
-        <textarea class="form-control" rows="8" id="comment" placeholder = "Your message here...."></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary col-md-1">Submit</button>
-    </form>
-  </div>
-  <footer>
-    <img src="images/social_icons/twitter.png" alt="twitter">
-    <img src="images/social_icons/dribble.png" alt="dribble">
-    <img src="images/social_icons/facebook.png" alt="facebook">
-    <img src="images/social_icons/g_plus.png" alt="g_plus">
-    <img src="images/social_icons/skype.png" alt="skype">
-    <img src="images/social_icons/stumble_upon.png" alt="stumble_upon">
-    <img src="images/social_icons/behance.png" alt="behance">
-    <img src="images/social_icons/pinterest.png" alt="pinterest">
-    <img src="images/social_icons/flickr.png" alt="flickr">
-    <!-- <img src="images/social_icons/you_tube.png" alt=""> -->
-    <p>DELANI STUDIO</p>
-    <p>2019</p>
-  </footer>
-  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us3.list-manage.com","uuid":"e71bed4d6ae5a7c984dfe28b0","lid":"dbf7e27685","uniqueMethods":true}) })</script>
-  <script src="js/jquery-3.4.1.js"></script>
-  <script src="js/script.js"></script>
-</body>
+      <form
+        id="form34A"
+        action="https://gmail.us3.list-manage.com/subscribe/post"
+        method="POST"
+      >
+        <input type="hidden" name="u" value="e71bed4d6ae5a7c984dfe28b0" />
+        <input type="hidden" name="id" value="dbf7e27685" />
+        <div class="form-group form-inline">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Name...."
+            name="MERGE1"
+            id="MERGE1"
+            size="25"
+            value=""
+          />
+          <input
+            type="email"
+            class="form-control"
+            placeholder="Email...."
+            autocapitalize="off"
+            autocorrect="off"
+            name="MERGE0"
+            id="MERGE0"
+            size="25"
+            value=""
+          />
+        </div>
+        <div class="form-group">
+          <textarea
+            class="form-control"
+            rows="8"
+            id="comment"
+            placeholder="Your message here...."
+          ></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary col-md-1">Submit</button>
+      </form>
+    </div>
+    <footer>
+      <img src="images/social_icons/twitter.png" alt="twitter" />
+      <img src="images/social_icons/dribble.png" alt="dribble" />
+      <img src="images/social_icons/facebook.png" alt="facebook" />
+      <img src="images/social_icons/g_plus.png" alt="g_plus" />
+      <img src="images/social_icons/skype.png" alt="skype" />
+      <img src="images/social_icons/stumble_upon.png" alt="stumble_upon" />
+      <img src="images/social_icons/behance.png" alt="behance" />
+      <img src="images/social_icons/pinterest.png" alt="pinterest" />
+      <img src="images/social_icons/flickr.png" alt="flickr" />
+      <!-- <img src="images/social_icons/you_tube.png" alt=""> -->
+      <p>DELANI STUDIO</p>
+      <p>2019</p>
+    </footer>
+    <script
+      type="text/javascript"
+      src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js"
+      data-dojo-config="usePlainJson: true, isDebug: false"
+    ></script>
+    <script type="text/javascript">
+      window.dojoRequire(["mojo/signup-forms/Loader"], function (L) {
+        L.start({
+          baseUrl: "mc.us3.list-manage.com",
+          uuid: "e71bed4d6ae5a7c984dfe28b0",
+          lid: "dbf7e27685",
+          uniqueMethods: true,
+        });
+      });
+    </script>
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
